--- a/index.html
+++ b/index.html
@@ -9,18 +9,11 @@
 <body>
     <h1>Temitayo's Portfolio</h1>
     <h2>I'm a Web Developer</h2>
-</body>
-</html>
+
 <hr>
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
 
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
 <h2>
-    <a href="http://127.0.0.1:5500/2.4%20Movie%20Ranking%20Project/index.html">
+    <a href="./public/movie-ranking.html">
         Movie Ranking Project</a>
 </h2>
 <img
@@ -29,7 +22,7 @@
   alt="Movie Ranking Project picture" />
 
 <h2>
-    <a href="http://127.0.0.1:5500/3.4%20Birthday%20Invite%20Project/index.html">
+    <a href="./public/birthday-invite.html">
         Birthday Invite Project </a>
 </h2>
 <img
@@ -37,10 +30,11 @@
   src="../4.3 HTML Porfolio Project/assets/images/birth-day.png"
   alt="Birthday Invite Project picture" />
 <hr>
-<h3><a href="http://127.0.0.1:5500/public/contact.html">Contact</a></h3>
-<h3><a href="http://127.0.0.1:5500/public/about.html">About me</a></h3>
+<h3><a href="./public/contact.html">Contact</a></h3>
+<h3><a href="./public/about.html">About me</a></h3>
+</body>
 
-
+</html>
 
 <!-- TODO 6: Add images to show the project previews
 HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
