--- a/birthday-invite.html
+++ b/birthday-invite.html
@@ -1,5 +1,12 @@
-<!-- Example image URL -->
-<h1>It's My Birthday!</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Birthday Invite</title>
+</head>
+<body>
+    <h1>It's My Birthday!</h1>
 <h2>On the 15th of February</h2>
 
 <img src="https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg"
@@ -15,3 +22,5 @@ alt="Purple birthday cake with candles"/>
 <!-- Example Google Maps Link -->
 <a href= "https://www.google.com/maps/@35.7040744,139.5577317,3a,75y,289.6h,87.01t,0.72r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656">Google map link</a>
 
+</body>
+</html>
