--- a/4.3+HTML+Portfolio+Project/4.3 HTML Porfolio Project/index.html
+++ b/4.3+HTML+Portfolio+Project/4.3 HTML Porfolio Project/index.html
@@ -14,7 +14,7 @@
         <a href="./public/movie-ranking.html"> Movie Ranking project
         </a>
     </h2>
-    <img class="fit-picture" src="../4.3 HTML Porfolio Project/assets/images/birthday-invite.png" alt="Birthday Invite Project pictures">
+    <img src="../4.3 HTML Porfolio Project/assets/images/birthday-invite.png" alt="Birthday Invite Project pictures">
     <hr>
     <h3>
         <a href="./public/contact.html">Conact</a>
